GNOME Bugzilla – Bug 698703
regression: can't press Ctrl+Z to undo when editing form text
Last modified: 2013-11-16 21:44:12 UTC
I'm using Epiphany built from git master with WebKitGTK 2.0.1. When I'm editing text in a form field, pressing Ctrl+Z does nothing. This is a regression, since in older versions (e.g. Epiphany 3.7.91) I could press Ctrl+Z to undo.
You can to point on specific filed, in a specific web there isn't Ctrl+Z, but is was in first version of Web?
Note that this requires the latest WebKit versions to work (2.1.3 or 2.2.2)
Carlos, Ctrl+Z is still not working for me with Epiphany built from git master and WebKitGTK 2.1.90. Are you suggesting that it currently works with WebKit 2.2?
I have WebKitGTK+ 2.2.2. Where I can to check this?
Yosef, just do this: 1. Load this Web page in Epiphany. 2. In the Additional Comments box, type "xyz". 3. Now press Ctrl+Z. The text "xyz" should vanish since Ctrl+Z should undo the typing. Unfortunately for me (with Epiphany from git master, and WebKitGTK 2.1.90) it does not.
OK, I see this, also with WebKitGTK+ 2.2.2 and epiphany from git master.
Just want to mean, in the release of 2.2.2[1]: Enable text edition undo/redo operations support in WebKit2. I will check this. [1] http://webkitgtk.org/2013/11/11/webkitgtk2.2.2-released.html
Created attachment 259702 [details] [review] ephy-window: Allow again undo and redo and and accel Ctrl+Z and Shift+Ctrl+Z * Add Undo and Redo to the gear menu * Add Undo and Redo to the popup menu when context is editable * Add Ctrl+Z accel to Undo and Shift+Ctrl+Z accek to Redo
I meant we need those wk version in addition to the epiphany patch.
Review of attachment 259702 [details] [review]: There are several typos in the commits message. - undo and redo and and accel - and Shift+Ctrl+Z accek to Redo Are you really adding the accels? It seems to me that the accels were already there, as part of the GtkActions, but we didn't have any proxy for the actions. Patch looks good to me.
Created attachment 259737 [details] [review] ephy-window: Allow again undo and redo and add accel Ctrl+Z and Shift+Ctrl+Z Indeed, was the accel, but it did nothing, so it same to have not the accel. I just wait ti 'accept-commit-now' status.
(In reply to comment #11) > Created an attachment (id=259737) [details] [review] > ephy-window: Allow again undo and redo and add accel Ctrl+Z and Shift+Ctrl+Z > > Indeed, was the accel, but it did nothing, so it same > to have not the accel. So, you are not adding them, but enabling them. It's not a big deal in any case, but I was confused when I read the commit message and nowhere in the patch accels were added. > I just wait ti 'accept-commit-now' status. I think you should also either bump the wk requirements, or enable undo/redo actions only when building with a new wk version, otherwise the actions will be in the UI doing nothing, which is even more confusing than not having the actions at all.
Created attachment 259743 [details] [review] ephy-window: Allow again undo and redo and work again accel Ctrl+Z and Shift+Ctrl+Z * Add Undo and Redo to the gear menu * Add Undo and Redo to the popup menu when context is editable * Work again Ctrl+Z accel to Undo and Shift+Ctrl+Z accel to Redo * Bump the WebKitGTK+ requirements to 2.2.2
Review of attachment 259743 [details] [review]: The patch looks good. You can commit to master, *but*, in stable we would be breaking the UI freeze. I think only adding the accels would be OK. If you cook a new patch that only adds the accels, we could add it to the gnome-3-10 branch, as a compromise.
Review of attachment 259743 [details] [review]: pushed as ephy-window: Allow again undo and redo and work again accel Ctrl+Z and Shift+Ctrl+Z - e3df5031c2508f54fbaa4aac3051b7b9b59347a2
Created attachment 259809 [details] [review] ephy-window: Allow again undo and redo and work again accel Ctrl+Z and Shift+Ctrl+Z * Work again Ctrl+Z accel to Undo and Shift+Ctrl+Z accel to Redo * Bump the WebKitGTK+ requirements to 2.2.2 This patch isn't same to the previous patch I pushed to master, so I wait to review also to this patch, for the gnome-3-10 branch.
Review of attachment 259809 [details] [review]: I guess this is still changing the UI adding new menu items, you should add accelerator entries to the xml instead.
(In reply to comment #17) > Review of attachment 259809 [details] [review]: > > I guess this is still changing the UI adding new menu items, you should add > accelerator entries to the xml instead. Where? I not see any menu is added with this patch.
I see 2 menu items added to the context menu. They don't end up in the UI because of the way we build the context menu, but that doesn't mean that's the proper way of adding accelerators.
Comment on attachment 259809 [details] [review] ephy-window: Allow again undo and redo and work again accel Ctrl+Z and Shift+Ctrl+Z I actually changed my mind and pushed your previous patch to the stable branch as well. It's such a small UI change, we can get away with it. Thanks anyway. Attachment 259809 [details] pushed as 7195080 - ephy-window: Allow again undo and redo and work again accel Ctrl+Z and Shift+Ctrl+Z
Yosef, thanks for the patch. I just tried this out in master and see a couple of issues: 1. With your changes sometimes Redo is available even when I think it shouldn't be. Try this: a. Visit a page with a form. b. Type 'abc'. c. Press Ctrl+Z to undo your typing. d. Type 'def'. e. Press Shift+Ctrl+Z (redo). 'abc' will reappear. This seems wrong. In other programs such as gedit, redo isn't available if you've made any other changes. Here's a similar example. a. Visit a page with a form. b. Type 'abc'. c. Select the text and press Delete. d. Press Undo. The text will reappear. e. Move the cursor to the end and type 'def'. You will now see 'abcdef'. f. Press Shift+Ctrl+Z (redo). The entire text vanishes. This seems odd. 2. Here's another problem: a. Visit a page with a form. b. Type 'abc'. c. Press Backspace three times to erase the text. d. Press Undo. The text should reappear, but nothing happens. Reopening.
Those are different issues. I would rather have two separate bug reports and keep this one closed.
OK - I'll close this and file new bugs for the issues above.
I think this it is a webkit issues, but I'm not sure because it hard to check - there isn't more web browse is use the new API of WebKit2GTK+ (midori still not ported, dwb also).