ephy-window: Allow again undo and redo and work again accel Ctrl+Z and Shift+Ctrl+Z

* Add Undo and Redo to the gear menu
* Add Undo and Redo to the popup menu when context is editable
* Work again Ctrl+Z accel to Undo and Shift+Ctrl+Z accel to Redo
* Bump the WebKitGTK+ requirements to 2.2.2

https://bugzilla.gnome.org/show_bug.cgi?id=698703